Fixed bug which caused same-language words to align to each other.

--- a/src/morea.scss
+++ b/src/morea.scss
@@ -365,7 +365,7 @@ $bookmark-color: #5E74A5;
 				background-color: #FCEBD6;
 			}
 
-			&.aligned {
+			&[data-translations^="urn"], &[data-translations^=",urn"] {
 				border-bottom: 2px solid #DDD; 
 			}
 
